# sudoku

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  license.md  readme.md
.github/workflows/: tests.yml
benches/: criterion.rs  hard_sudokus.txt  lib.rs
examples/: example.rs  project_euler.rs
src/: bitset.rs  board.rs  brute_force.rs  consts.rs  covers.rs  detect_uniques.rs  entry.rs  errors.rs  field.rs  generator.rs  helper.rs  lib.rs  main.rs  parse_error.rs  parse_errors.rs  positions.rs  positions2.rs  project_lines.rs  project_numbers.rs  solver.rs  strategy.rs  strategy_solver.rs  sudoku.rs  types.rs
src/board/: candidate.rs  canonicalization.rs  cell_state.rs  digit.rs  grid_state.rs  mod.rs  positions.rs  sudoku.rs
src/strategy/: board.rs  deduction.rs  mod.rs  solver.rs  strategies.rs  utils.rs
src/strategy/strategies/: almost_locked_sets.rs  avoidable_rectangles.rs  basic_fish.rs  hidden_singles.rs  hidden_subsets.rs  locked_candidates.rs  mod.rs  mutant_fish.rs  naked_singles.rs  naked_subsets.rs  prelude.rs  xy_wing.rs  xyz_wing.rs
src/strategy_solver/: hidden_singles.rs  mod.rs  naked_singles.rs  solver.rs  strategies.rs  traits.rs
sudokus/: easy_sudokus.txt  invalid_sudokus.txt  invalid_sudokus_reformatted.txt  medium_sudokus.txt  solved_easy_sudokus.txt  solved_hard_sudokus.txt  solved_medium_sudokus.txt
sudokus/Lines/: hard_sudokus.txt  invalid_sudokus.txt  medium_sudokus.txt  solved_easy_sudokus.txt  solved_hard_sudokus.txt  solved_medium_sudokus.txt  solved_sudoku17.txt  solved_top50k.txt  sudoku17.txt  top50k.txt
tests/: lib.rs
