[package]
name = "sudoku"
description = "A sudoku solver library"
license = "AGPL-3.0"
repository = "https://github.com/emerentius/sudoku"
documentation = "https://docs.rs/sudoku"
version = "0.6.0"
authors = ["Emerentius"]

[dependencies]
rand = "0.5.0"
serde = { version = "1.0.64", optional = true }

[features]
# The solver does enough indexing that the performance impact can be significant
# ranging from 2-12% of the total runtime spent because of bounds checks.
# Nevertheless, the solver is fast enough with checks that you probably don't want to risk
# being pwned because of a bug in it so checks are activated by default
# This feature deactivates bounds checks in the solver.
unchecked_indexing = []
